[BUG] SavedCourseId 인식 오류 (#36)